[package]
name = "cmbot"
version = "0.1.0"
authors = ["Xoroshka <sizmat444@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = { version = "0.2", features = ["tls"] }
reqwest = { version = "0.10", features = ["json"] }
telegram_types = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rusqlite = "0.26"
rusqlite = { version = "0.24", features = ["load_extension", "vtab"]}
juniper = "0.14"
juniper_warp = "0.5"
chrono = {version="0.4",features = ["serde"]}
anyhow = "1.0"
sha2 = "0.9"
rand = "0.7"
sled = "0.34.4"
bincode = "1.3.1"
